--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
                 <div class="logo">
                 </div>
             </div>
+            <div class="nav-address"> 
+                <p>Deliver to</p>
+                <div class="address-icon">
+                    <div class="add-icon-div">
+                        <div class="add-icon">
+                            
+                        </div>
+                    </div>
+                    <p>Bangladesh</p>
+                </div>
+            </div>
         </div>
     </header>
 </body>
