just modify address text

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
                 </div>
             </div>
             <div class="nav-address"> 
-                <p>Deliver to</p>
+                <p class="add-fist">Deliver to</p>
                 <div class="address-icon">
                     <div class="add-icon-div">
                         <div class="add-icon">
                             
                         </div>
                     </div>
-                    <p>Bangladesh</p>
+                    <p class="add-second">Bangladesh</p>
                 </div>
             </div>
         </div>
